Проект предварительной сборки для промежуточной аттестации -исправлены ссылки для перехода между страничками -материал отправлен для оценки.

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -12,7 +12,7 @@
 </form>
 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 <hr>
-<a href="admin/product">Просмотр, добавление и редактирование товаров</a>
+<a href="admin/product">Перейти к списку товаров</a>
 <br>
 <a href="admin/orders">Просмотр заказов</a>
 <br>
