--- a/src/main/resources/templates/product/infoProduct.html
+++ b/src/main/resources/templates/product/infoProduct.html
@@ -23,7 +23,7 @@
   <img th:src="'/img/' + ${img.getFileName()}">
 </div>
 
-<a href="javascript:history.back()">Назад</a>
+<a href="/admin/product">Назад</a>
 
 </body>
 </html>
