--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -17,6 +17,7 @@
 </div>
 <h3 th:text="'Итоговая цена: ' + ${price}"></h3>
 <a href="/order/create">Оформить заказ</a>
+<a href="/person_account">Продолжить покупки</a>
 
 </body>
 </html>
