--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <div th:insert="~{head :: copy_head}"></div>
     <title>Личный кабинет администратора</title>
 </head>
 <body>
+<div th:insert="~{navbar :: navbar}"></div>
+<div class="container" mt-5>
+    <div class="row align-items-start">
+        <div class="col">
 <h1>Личный кабинет администратора</h1>
 <hr>
 <form method="POST" th:action="@{/logout}">
@@ -18,6 +23,12 @@
 <br>
 <a href="admin/users">Посмотреть информацию о пользователях</a>
 <hr>
+        </div>
+    </div>
+</div>
+            <br>
+            <hr>
+            <div th:insert="~{footer :: copy}"></div>
 
 </body>
 </html>
