--- a/src/main/resources/templates/authentication.html
+++ b/src/main/resources/templates/authentication.html
@@ -2,26 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <div th:insert="~{head :: copy_head}"></div>
     <title>Аутентификация</title>
     <link th:href="@{/css/index.css}" type="text/css" rel="stylesheet">
 </head>
 <body>
+<div th:insert="~{navbar :: navbar}"></div>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner" >
+        <div class="carousel-item active">
+            <img src="/img/scale_2400.webp"  class="d-block w-100" alt="..." >
+        </div>
+        <div class="carousel-item">
+            <img src="/img/scale_2400.webp" class="d-block w-100" alt="..." >
+        </div>
+
+    </div>
+</div>
+
+<div class="container" mt-5>
+    <div class="row align-items-start">
+        <div class="col">
 <h1>Вход</h1>
 <form method="post" action="/process_login">
 <!--Внедряем токен csrf в форму через скрытое поле-->
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+    <div class="row">
+
 <!-- Обязательно использовать имена username и password - это зарезервированные слова SS, по ним он перехватит данные -->
-  <label for="username"></label>
-  <input type="text" placeholder="Введите логин" name="username" id="username">
+  <label for="username" class="col-sm-2 col-form-label col-form-label-lg">Логин: </label>
+        <div class="col-sm-10">
+  <input type="text" class="form-control form-control-lg" placeholder="Введите логин" name="username" id="username" >
+        </div>
+    </div>
   <br>
-  <label for="password"></label>
-  <input type="password" placeholder="Введите пароль" name="password" id="password">
+    <div class="row">
+  <label for="password" class="col-sm-2 col-form-label col-form-label-lg">Пароль:</label>
+        <div class="col-sm-10">
+  <input type="password" class="form-control form-control-lg" placeholder="Введите пароль" name="password" id="password">
+        </div>
+    </div>
   <br>
+    <div class="col-sm-10 mt-3">
   <input type="submit" value="Войти">
+    </div>
 </form>
 <div th:if="${param.error}" style="color: red">
   Неправильный логин или пароль
 </div>
 <a href="/registration">Регистрация нового пользователя</a>
+        </div>
+    </div>
+</div>
+<br>
+<hr>
+<div th:insert="~{footer :: copy}"></div>
 </body>
 </html>
