--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,23 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <div th:insert="~{head :: copy_head}"></div>
     <title>Регистраци</title>
 </head>
 <body>
+<div th:insert="~{navbar :: navbar}"></div>
+<div class="container" mt-5>
+    <div class="row align-items-start">
+        <div class="col">
 <h1>Регистрация</h1>
 
 <form method="post" th:action="@{/registration}" th:object="${person}">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-    <label for="login">Введите логин: </label>
-    <input type="text" th:field="*{login}" id="login">
+    <div class="row">
+    <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">
+        Логин:</label>
+        <div class="col-sm-10">
+    <input type="text" class="form-control form-control-lg" id="colFormLabelLg" placeholder="Введите логин"th:field="*{login}" >
+        </div>
+    </div>
     <div style="color: red" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></div>
     <br>
-    <label for="password">Введите пароль: </label>
-    <input type="text" th:field="*{password}" id="password">
+        <div class="row">
+    <label for="password" class="col-sm-2 col-form-label col-form-label-lg">Пароль:</label>
+            <div class="col-sm-10">
+
+    <input type="text" class="form-control form-control-lg" placeholder="Введите пароль" th:field="*{password}" id="password">
+           </div>
     <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
     <br>
+            <div class="col-sm-10 mt-3">
     <input type="submit" value="Зарегистрироваться">
+            </div>
+        </div>
 </form>
 <a href="/authentication">Войти в систему</a>
+        </div>
+    </div>
+</div>
+<div th:insert="~{footer :: copy}"></div>
 </body>
 </html>
+
