--- a/src/main/resources/templates/user/infoProduct.html
+++ b/src/main/resources/templates/user/infoProduct.html
@@ -13,7 +13,7 @@
 <p th:text="'Наименование: ' + ${product.getTitle()}"></p>
 <p th:text="'Описание: ' + ${product.getDescription()}"></p>
 <p th:text="'Цена: ' + ${product.getPrice()}"></p>
-<p th:text="'Склад: ' + ${product.getWarehouse()}"></p>
+<p th:text="'Артикул: ' + ${product.getWarehouse()}"></p>
 <p th:text="'Продавец: ' + ${product.getSeller()}"></p>
 <p th:text="'Категория: ' + ${product.getCategory().getTitle()}"></p>
 <!--Выводим фотографии товара - проходимся циклом по переданной модели, забираем из неё лист
