Добавлено оформление. Работает всё. ПредПродакшн.

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -11,7 +11,7 @@
         <div class="container">
           <footer class="row ">
             <div class="col mb-3">
-              <a class="">
+              <a href="#link2" class="">
                 <img
                         src="/img/Sc16.jpg"
                         class="bi me-2"
