--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -12,7 +12,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">VISION</a>
+      <a class="navbar-brand" id="link2">VISION</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +28,7 @@
             <a class="nav-link" href="/registration">Зарегистрироваться</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/authentication">Вход</a>
+            <a class="nav-link" href="#link1">Вход</a>
           </li>
         </ul>
       </div>
