--- a/src/main/resources/templates/product/product.html
+++ b/src/main/resources/templates/product/product.html
@@ -13,7 +13,9 @@
 
 <!--В Config прописали, что эта страница будет доступна всем пользователям-->
 
-<h1>Главная страница</h1>
+<h1>Наш ассортимент</h1>
+            <hr>
+            <br>
 <h3>Сортировка, поиск, фильтрация</h3>
 <!--th:action - указываем, каким URL-адресом будет обработана наша страница(на какой адрес
 её отправляем, т.е. этот адрес д.б. у соответствующего контролера
