--- a/src/main/resources/templates/authentication.html
+++ b/src/main/resources/templates/authentication.html
@@ -11,10 +11,18 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner" >
         <div class="carousel-item active">
-            <img src="/img/scale_2400.webp"  class="d-block w-100" alt="..." >
+            <img src="/img/vision.jpg"  class="d-block w-100" alt="..." >
+            <div class="carousel-caption d-none d-md-block">
+                <h1>V I S I O N</h1>
+                <p>Всегда осознанный выбор.</p>
+            </div>
         </div>
         <div class="carousel-item">
-            <img src="/img/scale_2400.webp" class="d-block w-100" alt="..." >
+            <img src="/img/vision.jpg" class="d-block w-100" alt="..." >
+            <div class="carousel-caption d-none d-md-block">
+                <h1>V I S I O N</h1>
+                <p>Современно. Качественно. Надежно. </p>
+            </div>
         </div>
 
     </div>
@@ -23,7 +31,7 @@
 <div class="container" mt-5>
     <div class="row align-items-start">
         <div class="col">
-<h1>Вход</h1>
+<h1 id="link1">Вход</h1>
 <form method="post" action="/process_login">
 <!--Внедряем токен csrf в форму через скрытое поле-->
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
