--- a/src/main/resources/templates/product/infoProduct.html
+++ b/src/main/resources/templates/product/infoProduct.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <div th:insert="~{head :: copy_head}"></div>
     <title>Информация о товаре</title>
 </head>
 <body>
+<div th:insert="~{navbar :: navbar}"></div>
 
 <!--Отображается при срабатывании метода infoProduct ProductController, который срабатывает
 при нажатии на ссылку в карточке товара на странице /product (где отображаются все товары-->
-
+<div class="container" mt-5>
+    <div class="row align-items-start">
+        <div class="col">
 <h1>Информация о товаре: </h1>
 <p th:text="'Наименование: ' + ${product.getTitle()}"></p>
 <p th:text="'Описание: ' + ${product.getDescription()}"></p>
@@ -22,8 +26,16 @@
 <div th:each="img : ${product.getImageList()}">
   <img th:src="'/img/' + ${img.getFileName()}">
 </div>
+            <hr>
+            <p>Товар доступен для приобретения только в личном кабинете после авторизации</p>
 
-<a href="/admin/product">Назад</a>
+<a href="/#">Назад</a>
+        </div>
+    </div>
+</div>
+<br>
+<hr>
+<div th:insert="~{footer :: copy}"></div>
 
 </body>
 </html>
