--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -2,22 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <div th:insert="~{head :: copy_head}"></div>
     <title>INDEX</title>
 </head>
 
+<body>
+<div th:fragment="navbar">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">VISION</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/product">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cart">Корзина</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/orders">Заказы</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#link1"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>>
+    </nav>
+</div>
+<div class="container" mt-5>
+    <div class="row align-items-start">
+        <div class="col">
+
+
 
     <h2>Личный кабинет</h2>
+            <hr>
     <form method="POST" th:action="@{/logout}">
         <button type="submit">Выйти из личного кабинета</button>
     </form>
     <br>
-    <form method="get" th:action="@{/cart}">
-        <button type="submit">Корзина</button>
-    </form>
-    <br>
-    <form method="get" th:action="@{/orders}">
-        <button type="submit">Ваши заказы</button>
-    </form>
+<!--    <form method="get" th:action="@{/cart}">-->
+<!--        <button type="submit">Корзина</button>-->
+<!--    </form>-->
+<!--    <br>-->
+<!--    <form method="get" th:action="@{/orders}">-->
+<!--        <button type="submit">Ваши заказы</button>-->
+<!--    </form>-->
     <br>
     <h3>Сортировка, поиск, фильтрация</h3>
     <!--th:action - указываем, каким URL-адресом будет обработана наша страница(на какой адрес
@@ -44,11 +82,11 @@
                 <label for="descending_price">Отсортировать по убыванию цены</label>
                 <p>Категория товара:</p>
                 <input type="radio" id="furniture" name="contract" value="furniture">
-                <label for="furniture">Мебель</label>
+                <label for="furniture">Линзы</label>
                 <input type="radio" id="appliances" name="contract" value="appliances">
-                <label for="appliances">Бытовая техника</label>
+                <label for="appliances">Растворы</label>
                 <input type="radio" id="clothes" name="contract" value="clothes">
-                <label for="clothes">Одежда</label>
+                <label for="clothes">Очки для компьютера</label>
                 <br>
                 <br>
                 <input type="submit" value="Найти">
@@ -80,7 +118,11 @@
         <a th:href="@{/cart/add/{id}(id=${product.getId()})}">Добавить товар в корзину</a>
         <hr>
     </div>
+        </div>
+    </div>
+</div>
+<div th:insert="~{footer :: copy}"></div>
 
-</form>
+
 </body>
 </html>
