Внесены изменения по формам. Рабочий вариант. День до защиты.

--- a/src/main/resources/templates/user/orders.html
+++ b/src/main/resources/templates/user/orders.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/person_account">Главная в личном кабинете</a>
+                        <a class="nav-link active" aria-current="page" href="/person_account">Вернуться в личный кабинет</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/authentication"></a>
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="/registration"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#link1">Вход</a>
+                        <a class="nav-link" href="#link1"></a>
                     </li>
                 </ul>
             </div>
