Финальная версия. Сборка подготовлена для аттестации.

--- a/src/main/resources/templates/product/infoProduct.html
+++ b/src/main/resources/templates/product/infoProduct.html
@@ -29,7 +29,7 @@
             <hr>
             <p>Товар доступен для приобретения только в личном кабинете после авторизации</p>
 
-<a href="/#">Назад</a>
+<a href="/admin/product">Назад</a>
         </div>
     </div>
 </div>
